# bmi-pyre

./: Dockerfile  README
Exchanger-1.0.1/: Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  config.cfg.in  configure  configure.ac  setup.py
Exchanger-1.0.1/Exchanger/: CoupledApp.py  Coupler.py  Exchanger.py  Layout.py  __init__.py
Exchanger-1.0.1/Exchanger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Exchanger-1.0.1/doc/: Exchanger.doxyconf
Exchanger-1.0.1/lib/: Array2D.cc  Array2D.h  Boundary.cc  Boundary.h  BoundedBox.cc  BoundedBox.h  BoundedMesh.cc  BoundedMesh.h  BoundingBox.cc  BoundingBox.h  CartesianCoord.h  Convertor.cc  Convertor.h  DIM.h  Inlet.cc  Inlet.h  Interpolator.cc  Interpolator.h  Outlet.cc  Outlet.h  SIUnit.cc  SIUnit.h  Sink.cc  Sink.h  Source.cc  Source.h  Spherical2Cartesian.cc  Spherical2Cartesian.h  UtilTemplate.cc  UtilTemplate.h  Utility.cc  Utility.h  exchangers.cc  exchangers.h
Exchanger-1.0.1/m4/: cit_python.m4
Exchanger-1.0.1/python/: Exchanger.egg-link  merlin-install.pth
Snac/: Makefile.def  project-config.sh
Snac/Python/Bindings/SnacContext/: bindings.c
Snac/VMake/Config/: mpi-config.sh  xml-config.sh
Snac/bmi/: Makefile.def  Makefile_bmi  bmi_impl.c  makefile
Snac/bmi/mmf/: MMF_Questions.txt  SNAC_metafile_20140714_Choi.xml  Solid_Assumptions.txt  Terminology-DeepEarth-EC.docx
Snac/bmi/src/: Makefile.def  bmi.h  bmi_impl.c  makefile
Snac/bmi/testing/: Makefile.def  bmi_test.xml  irf_test.c  main.c
Snac/bmi/tests/: bmi_test.xml  irf_test.c  makefile
Snac/libSnac/src/: Context.c  Context.h
Snac/plugins/remesher_BI/: RemeshElements.c
Snac/pyre/: Application.py
Snac/pyre/Exchanger/: Boundary.cc  SnacInterpolator.cc  global_bbox.cc  misc.cc
Snac/tests/: basic-bmiPyre-irf.py  basic-pyre.sh  basic-pyre.xml  debug_pyre.py  input.xml  minLengthScale.0  sim.0
StGermain/: project-config.sh
StGermain/Discretisation/Mesh/src/: HexaEL.c  makefile
StGermain/Discretisation/Utils/src/: makefile
StGermain/VMake/Config/: math-config.sh  mpi-config.sh  python-config.sh
StGermain/pyre/: Application.py  Controller.py  Solver.py
VMake/Config/: mpi-config.sh
bmi/: bmiPyre.py
